# detr

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  pyproject.toml
.github/: copilot-instructions.md
configs/: config.yaml  ddetr.yaml  detr.yaml  dino.yaml  evaluate.yaml  export.yaml  inference.yaml  lwdetr.yaml  train.yaml
configs/criterion/: ddetr.yaml  detr.yaml  lwdetr.yaml  set.yaml
configs/dataset/: coco.yaml  o365.yaml
configs/ema/: constant.yaml  warmup.yaml
configs/hydra/: logging.yaml  simple.yaml
configs/model/: ddetr.yaml  detr.yaml  dino.yaml  large.yaml  lwdetr.yaml  medium.yaml  nano.yaml  small.yaml
configs/optimizer/: adamw.yaml  ddetr.yaml  detr.yaml  dino.yaml  lwdetr.yaml
configs/scheduler/: cosine.yaml  ddetr.yaml  detr.yaml  dino.yaml  step.yaml
configs/transforms/: base.yaml  large.yaml  medium.yaml  nano.yaml  small.yaml
scripts/: setup.sh  train-tacc.slurm  train-vista.slurm
src/: benchmark.py  engine.py  eval.py  evaluate.py  export.py  inference.py  train.py
src/criterion/: __init__.py  criterion.py  hungarian_matcher.py  matcher.py  set_criterion.py
src/data/: __init__.py  coco_dataset.py  image_dataset.py  transforms.py
src/evaluators/: __init__.py  coco_evaluator.py  evaluator.py
src/models/: __init__.py  backbone.py  decoder.py  deformable_attention.py  detr.py  dinov2.py  encoder.py  layers.py  model.py  positional_embedding.py  projector.py  transformer.py
src/utils/: boxes.py  checkpoint.py  distribution.py  edges.py  ema.py  logger.py  lr.py  (+5 more)
tests/: test_export.py
(+24 files in other folders)
