[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "detr"
version = "0.1.0"
description = "DETR implementation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.ruff]
src = ["src", "tests"]
line-length = 140
lint.select = ["F", "I"]

[tool.black]
line-length = 140