[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "detr"
version = "0.1.0"
description = "Detection Transformers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["gmpy2", "tensorrt", "onnx-ir==0.2.0", "onnxscript==0.6.2", "onnxruntime==1.24.4", "onnxruntime-gpu==1.24.4"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.ruff]
src = ["src", "tests"]
line-length = 140
lint.select = ["F", "I"]

[tool.black]
line-length = 140
target-version = ['py312']